--- a/src/styling.scss
+++ b/src/styling.scss
@@ -1,18 +1,80 @@
-#multiuser-sample {
-    // override styles here
+.bp-sample {
 
-    // $shadow-blur-radius:    7px !default; 
-    // $shadow-spread-radius:  -2px !default; 
-    // $shadow-length:         0px !default; 
+    $gray-color: #3f3f3f;
 
-    // .rg-header-cell {
-    //     background-color: rgba(128, 128, 128, 0.1) !important;
-    // }
+    .rg-horizontalChevron-cell {
+        justify-content: space-between;
 
-    .rg-cell-focus {
-        transition: all 0.3s;
-        // height: 50px !important;
+        .chevron {
+            .icon {
+                margin-top: -0.05em;
+            }
+
+            pointer-events: auto;
+            display: flex;
+            justify-content: center;
+            font-weight: bold;
+            margin-right: 1em * 0.1;
+            cursor: pointer;
+            transition: 300ms all ease-in-out;
+            height: 1em;
+            width: 1em;
+        }
+
+        .no-child {
+            width: 0.5em;
+        }
+
+        &.expanded .chevron {
+            transform: rotateY(180deg);
+        }
+
+        &.collapsed .chevron {
+            transform: rotateY(0deg);
+        }
     }
 
-    @import '@silevis/reactgrid/styles.scss';
+    .year {
+        &:not(.header) {
+            color: $gray-color;
+            background-color: #eee;
+        }
+
+        &.header {
+            background-color: lighten($color: #0683F9, $amount: 25);
+        }
+    }
+
+    .quarter {
+        &:not(.editable):not(.header) {
+            color: $gray-color;
+            background-color: #eee;
+        }
+
+        &.header {
+            background-color: lighten($color: #0683F9, $amount: 35);
+        }
+    }
+
+    .month {
+        &:not(.editable):not(.header) {
+            color: $gray-color;
+            background-color: #eee;
+        }
+
+        &.header {
+            background-color: lighten($color: #0683F9, $amount: 45);
+        }
+    }
+
+    .rg-chevron-cell,
+    .rg-text-cell {
+        background-color: #f8f8f8;
+    }
+
+    .rg-nonEditableNumber-cell {
+        justify-content: flex-end;
+        transition: all 0.1s;
+    }
+
 }
